<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nutrition App</string>
    <string name="hello_world">Hello world!</string>
    <string name="test">Testing Splash Screen</string>
    <string name="testing_splash">DOES THIS WORK</string>
    <string name="action_settings">Settings</string>

    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>

    <string name="save">Save</string>
    <string name="Okay1">Okay!</string>

    <string name="Placeholder">Placeholder</string>
    <string name="Title01">Settings Saved!</string>
    <string name="Title02">Your Height:</string>
    <string name="Title03">Your Weight:</string>
    <string name="Title04">Your Age:</string>
    <string name="Title05">Your Gender:</string>
    <string name="Title06">Your Food:</string>



</resources>
