<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Helvetica"
        android:gravity="center_horizontal"
        android:text="@string/Title01"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="sans" />

    <TextView
        android:id="@+id/title55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title05"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewUserGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title02"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewUserHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title03"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewUserWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title04"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewUserAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnOkay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Okay1" />

</LinearLayout>