<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/saveLayout"
    android:orientation="vertical" >



    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:completionThreshold="1"
        android:ems="20"
        android:gravity="center"
        android:hint="@string/gender"
        android:paddingRight="5dp"
        android:textColor="#7ac178"
        android:textColorHint="#7ac178"
        android:textSize="20sp" />

    <requestFocus />


    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:completionThreshold="1"
        android:ems="20"
        android:gravity="center"
        android:hint="@string/height"
        android:paddingRight="5dp"
        android:textColor="#7ac178"
        android:textColorHint="#7ac178"
        android:textSize="20sp" />


    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:completionThreshold="1"
        android:hint="@string/weight"
        android:ems="20"
        android:gravity="center"
        android:textColorHint="#7ac178"
        android:paddingRight="5dp"
        android:textSize="20sp" >
    </AutoCompleteTextView>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:completionThreshold="1"
        android:hint="@string/age"
        android:ems="20"
        android:gravity="center"
        android:textColorHint="#7ac178"
        android:paddingRight="5dp"
        android:textSize="20sp" >
    </AutoCompleteTextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>